[package]
authors.workspace = true
categories.workspace = true
description = "scsys-derive implements a host of useful procedural macros for use throughout the ecosystem"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-derive"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false
doctest = false
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "2" }

[dev-dependencies]
serde = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
