[package]
name = "scsys-derive"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
doctest = false
proc-macro = true
test = false

[[test]]
name = "variants"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
