[package]
build = "build.rs"
description = "useful derive macros for the scsys ecosystem"
name = "scsys-derive"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
doc = true
doctest = false
proc-macro = true
test = false

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "2" }

# ************* [Unit Tests] *************
[[test]]
name = "variants"
