[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-generate"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
rand = "0.8"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { features = ["js"], version = "0.2" }

[target.wasm32-wasi]

