[package]
authors.workspace = true
categories = []
description = "scsys-macros"
edition.workspace = true
homepage.workspace = true
keywords = []
license.workspace = true
name = "scsys-macros"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { features = ["full"], version = "2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
