[package]
build = "build.rs"
name = "scsys"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = [ "cdylib", "rlib", "staticlib" ]
doctest = true
test = true

[features]
default = [
    "std",
    "traits",
    "utils",
]

full = [
    "default",
    "derive",
    "json",
    "macros",
    "rand",
    "serde",
    "time",
]

# ********* [FF] Features *********
config = [
    "dep:scsys-cnf",
    "std"
]

derive = [
    "dep:scsys-derive",
]

macros = [
    "dep:scsys-macros",
]

traits = [
    "dep:scsys-traits",
]

utils = [
    "dep:scsys-util",
]

# ********* [FF] Dependencies *********
alloc = [
    "scsys-core/alloc",
    "scsys-util?/alloc",
]

anyhow = [
    "scsys-core/anyhow",
]

chrono = [
    "scsys-core/chrono",
]

json = [
    "scsys-core/json",
]

rand = [
    "scsys-core/rand",
]

rng = [
    "scsys-core/rng",
]

serde = [
    "scsys-core/serde",
    "scsys-util?/serde",
]

time = [
    "scsys-core/time",
]

# ********* [FF] Environments *********
std = [
    "scsys-core/std",
    "scsys-traits?/std",
    "scsys-util?/std",
]

wasi = [
    "scsys-core/wasi",
]

wasm = [
    "scsys-core/wasm",
]

[dependencies]
scsys-core = { workspace = true }
scsys-cnf = { optional = true, workspace = true }
scsys-derive = { optional = true, workspace = true }
scsys-macros = { optional = true, workspace = true }
scsys-traits = { optional = true, workspace = true }
scsys-util = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
criterion = { version = "0.5" }
serde = { features = ["std"], workspace = true }
serde_json = { features = ["std"], workspace = true }

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

# ********* benches *********
[[bench]]
harness = false
name = "default"
path = "benches/default.rs"
required-features = ["std"]

# ********* examples *********
[[example]]
name = "derive"
required-features = [ "derive", "serde" ]

# ********* test *********
[[test]]
name = "derive"
required-features = [ "derive" ]
