[package]
build = "build.rs"
name = "scsys"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = [ "cdylib", "rlib", "staticlib" ]
bench = true
doc = true
doctest = true
test = true

[dependencies]
scsys-core = { workspace = true }
scsys-config = { optional = true, workspace = true }
scsys-crypto = { optional = true, workspace = true }
scsys-derive = { optional = true, workspace = true }
scsys-macros = { optional = true, workspace = true }
scsys-traits = { optional = true, workspace = true }
scsys-util = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
criterion = { version = "0.6" }
serde = { features = ["std"], workspace = true }
serde_json = { features = ["std"], workspace = true }

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[features]
default = [
    "derive",
    "macros",
    "std",
    "traits",
    "utils",
]

full = [
    "default",
    "config",
    "crypto",
    "json",
    "rand",
    "serde",
    "time",
]

# ********* [FF] Features *********
config = [
    "dep:scsys-config",
    "scsys-config?/default",
    "std"
]

crypto = [ "dep:scsys-crypto" ]

derive = [ "dep:scsys-derive" ]

macros = [ "dep:scsys-macros" ]

traits = [ "dep:scsys-traits" ]

utils = [ "dep:scsys-util" ]

# ********* [FF] Environments *********
std = [
    "scsys-core/std",
    "scsys-crypto?/std",
    "scsys-traits?/std",
    "scsys-util?/std",
]

wasi = [
    "scsys-core/wasi",
    "scsys-crypto?/wasi",
]

wasm = [
    "scsys-core/wasm",
    "scsys-crypto?/wasm",
]

# ********* [FF] Dependencies *********
alloc = [
    "scsys-core/alloc",
    "scsys-crypto?/alloc",
    "scsys-traits?/alloc",
    "scsys-util?/alloc",
]

anyhow = [
    "scsys-core/anyhow",
    "scsys-crypto?/anyhow",

]

chrono = [
    "scsys-core/chrono",
    "scsys-crypto?/chrono",
]

json = [
    "scsys-core/json",
    "scsys-crypto?/json",
]

rand = [
    "scsys-core/rand",
    "scsys-crypto?/rand",
]

rng = [
    "scsys-core/rng",
    "scsys-crypto?/rng",
]

serde = [
    "scsys-core/serde",
    "scsys-crypto?/serde",
    "scsys-util?/serde",
]

time = [
    "scsys-core/time",
    "scsys-crypto?/time",
]

tracing = [
    "scsys-core/tracing",
    "scsys-config?/tracing",
    "scsys-crypto?/tracing",
]

wasm-bindgen = [
    "scsys-core/wasm-bindgen",
]

# ************* [Benchmarks] *************
[[bench]]
harness = false
name = "default"
path = "benches/default.rs"
required-features = ["std"]

# ************* [Examples] *************
[[example]]
name = "derive"
required-features = [ "derive", "serde" ]


# ************* [Unit Tests] *************
[[test]]
name = "derive"
required-features = [ "derive" ]