[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-stores"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []


[build-dependencies]

[dependencies]
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]