[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-stores"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

serde = [
    "dep:serde", 
    "serde-ext"
]

serde-ext = [
    "dep:serde_json"
]

std = []

wasi = []

wasm = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]