[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "scsys-stores"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

serde = [
    "dep:serde", 
    "scsys-core/serde"
]

std = [
    "scsys-core/std"
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
serde = { optional = true, features = ["derive"], version = "1" }
smart-default.workspace = true
strum.workspace = true

[dependencies.scsys-core]
path = "../core"
version = "0.2.2"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]