[package]
build = "build.rs"
name = "scsys-traits"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doc = true
doctest = true
test = true

[dependencies]
num-traits = { workspace = true }

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"


[features]
default = ["std"]

full = [
    "default"
]

# ************* [FF:Dependencies] *************
alloc = []

# ************* [FF:Environments] *************
std = [
    "alloc",
]

# ************* [Unit Tests] *************
[[test]]
name = "default"