[package]
build = "build.rs"
name = "scsys-util"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doc = true
doctest = true
test = true

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# shared
num-traits = { workspace = true }
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
strum = { workspace = true }

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]


[features]
default = [
    "std",
    "fs",
]

full = [
    "default",
    "json",
    "rand",
    "serde",
]

# ************* [FF:Features] *************
fs = []

# ************* [FF:Environments] *************
std = [
    "alloc",
    "num-traits/std",
    "rand?/std",
    "rand?/std_rng",
    "serde?/std",
    "strum/std",
]

wasi = []

wasm = [
    "getrandom?/wasm_js",
]

# ************* [FF:Dependencies] *************
alloc = [
    "serde?/alloc",
    "serde_json?/alloc",
]

json = [
    "dep:serde_json",
    "alloc",
    "serde"
]

rand = [
    "dep:rand",
    "rng",
]

rng = [
    "dep:getrandom",
    "rand?/small_rng",
    "rand?/thread_rng",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "serde?/derive",
    "rand?/serde",
]

# ************* [Unit Tests] *************
[[test]]
name = "casing"
required-features = ["alloc"]